--- a/app/templates/reminders.hbs
+++ b/app/templates/reminders.hbs
@@ -1,12 +1,26 @@
 {{add-reminder}}
-{{outlet}}
+
+
+<!-- {{#each model as |reminder|}}
+  <ul class='reminders-list'>
+    <li class='spec-reminder-title'>
+      {{#link-to 'reminders.reminder' reminder.id class="spec-reminder-item"}}
+        <h3>{{reminder.title}}</h3>
+      {{/link-to}}
+    </li>
+  </ul>
+{{/each}} -->
+
 
 {{#each model as |reminder|}}
-  <ul class="reminders-list">
+  <ul class='reminders-list'>
     <li class='spec-reminder-title'>
-      {{#link-to 'reminders.reminder' reminder.id  class='spec-reminder-item'}}
-        {{reminder.title}}
+      {{#link-to 'reminders.reminder' reminder.id class="spec-reminder-item"}}
+        <h3>{{reminder.title}}</h3>
       {{/link-to}}
     </li>
   </ul>
 {{/each}}
+
+
+{{outlet}}
