--- a/app/templates/reminders/reminder.hbs
+++ b/app/templates/reminders/reminder.hbs
@@ -1,4 +1,4 @@
-<div class='spec-reminder-item'>
-<h3>{{model.title}}</h3>
-<p>{{model.notes}}</p>
+<div>
+<h3 class='spec-reminder-title'>{{model.title}}</h3>
+<p class='spec-reminder-notes'>{{model.notes}}</p>
 </div>
