Form inputs and button available on route reminders/new

--- a/app/templates/reminders/new.hbs
+++ b/app/templates/reminders/new.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<!-- {{outlet}} -->
+
+<form {{action 'createReminder' on='submit'}}>
+  <label>Title{{input value=title}}</label>
+  <label>Date{{input value=date}}</label>
+  <label>Notes{{input value=notes}}</label>
+  <button>Add</button>
+</form>
