Date displays on single reminder view

--- a/app/templates/reminders/reminder.hbs
+++ b/app/templates/reminders/reminder.hbs
@@ -1,4 +1,5 @@
 <div>
   <h3 class='spec-reminder-title'>{{model.title}}</h3>
+  <h4 class='spec-reminder-date'>{{model.date}}</h4>
   <p class='spec-reminder-notes'>{{model.notes}}</p>
 </div>
