--- a/app/templates/reminders/new.hbs
+++ b/app/templates/reminders/new.hbs
@@ -1,8 +1,1 @@
-<!-- {{outlet}} -->
-
-<form {{action 'createReminder' on='submit'}}>
-  <label>Title{{input value=title}}</label>
-  <label>Date{{input value=date}}</label>
-  <label>Notes{{input value=notes}}</label>
-  <button>Add</button>
-</form>
+{{add-reminder}}
