Add add new reminder acceptance test

--- a/app/templates/reminders.hbs
+++ b/app/templates/reminders.hbs
@@ -9,7 +9,7 @@
 {{/each}}
 
 {{#link-to "reminders.new"}}
-  <button>Create New Reminder</button>
+  <button class='spec-view-form'>Create New Reminder</button>
 {{/link-to}}
 
 {{outlet}}
