Add two passing tests checking if the user is alerted appropriately with a message if no reminders exist

--- a/app/templates/reminders.hbs
+++ b/app/templates/reminders.hbs
@@ -12,7 +12,7 @@
   {{/each}}
 
   {{else}}
-    <p>Please add your first reminder!</p>
+    <p class="spec-no-reminder-status">Please add your first reminder!</p>
 {{/if}}
 
 {{#link-to "reminders.new"}}
