--- a/app/templates/reminders/reminder.hbs
+++ b/app/templates/reminders/reminder.hbs
@@ -2,4 +2,7 @@
   <h3 class='spec-reminder-title'>{{model.title}}</h3>
   <h4 class='spec-reminder-date'>{{model.date}}</h4>
   <p class='spec-reminder-notes'>{{model.notes}}</p>
+  {{#link-to "reminders.reminder.edit"}}
+    <button>Edit</button>
+  {{/link-to}}
 </div>
