--- a/app/templates/reminders/reminder.hbs
+++ b/app/templates/reminders/reminder.hbs
@@ -3,7 +3,7 @@
   <h4 class='spec-reminder-date'>{{model.date}}</h4>
   <p class='spec-reminder-notes'>{{model.notes}}</p>
   {{#link-to "reminders.reminder.edit"}}
-    <button>Edit</button>
+    <button class='spec-edit-reminder' >Edit</button>
   {{/link-to}}
 </div>
 
