Add test passing for new reminder rendered when created

--- a/app/templates/reminders.hbs
+++ b/app/templates/reminders.hbs
@@ -16,7 +16,7 @@
 {{/if}}
 
 {{#link-to "reminders.new"}}
-  <button class='spec-view-form'>Create New Reminder</button>
+  <button class='spec-add-new-form'>Create New Reminder</button>
 {{/link-to}}
 
 </section>
