--- a/app/templates/components/edit-reminder.hbs
+++ b/app/templates/components/edit-reminder.hbs
@@ -7,5 +7,5 @@
 </form>
 
 {{#if edit}}
-  <p id="spec-edit-status">You have unsaved changes!</p>
+  <p id="spec-edit-status">Do not forget to save your changes!</p>
 {{/if}}
