--- a/app/templates/reminders/reminder/edit.hbs
+++ b/app/templates/reminders/reminder/edit.hbs
@@ -1,1 +1,1 @@
-{{edit-reminder model=model edit=true action='editReminder' action='rollbackChanges'}}
+{{edit-reminder model=model action='editReminder' action='rollbackChanges'}}
