add a delete button and controller files, commit to try and cherry pick

--- a/app/templates/reminders.hbs
+++ b/app/templates/reminders.hbs
@@ -7,6 +7,7 @@
         {{#link-to 'reminders.reminder' reminder.id}}
           <h3 class='spec-reminder-item'>{{reminder.title}}</h3>
         {{/link-to}}
+        <button class='spec-remove-reminder' {{action 'remove' reminder.id}}>X</button>
       </li>
     </ul>
   {{/each}}
